# pytest-celery

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: parallel-support.yml  python-package.yml
src/pytest-celery/: plugin.py
src/pytest_celery/: __init__.py  defaults.py  utils.py
src/pytest_celery/api/: container.py  setup.py
src/pytest_celery/components/: __init__.py
src/pytest_celery/components/backend/: __init__.py
src/pytest_celery/components/broker/: __init__.py
src/pytest_celery/components/worker/: Dockerfile  __init__.py  api.py  app.py  fixtures.py  session.py
src/pytest_celery/containers/: __init__.py  memcached.py  rabbitmq.py  redis.py  worker.py
src/pytest_celery/fixtures/: __init__.py  backend.py  broker.py  setup.py  worker.py
src/pytest_celery/fixtures/session/: __init__.py  backend.py  broker.py  setup.py  worker.py
tests/: conftest.py
tests/common/: test_setup.py
tests/common/celery4/: Dockerfile  api.py  fixtures.py
tests/integration/: conftest.py  design_POC.py  multi_broker_setup.py  test_defaults.py
tests/integration/api/: test_backend.py  test_broker.py  test_cluster.py  test_worker.py
tests/integration/components/: test_memcached.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/integration/containers/: test_container.py  test_memcached.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/integration/setup/: test_custom_setup.py  test_setup.py
tests/integration/setup/custom/: conftest.py  test_custom_setup.py  test_setup.py
tests/integration/setup/custom_setup/: conftest.py  test_custom_setup.py
tests/integration/shared/celery4/: fixtures.py
tests/shared/celery4/: fixtures.py
tests/smoke/: conftest.py  signal_handlers.py  test_acceptance.py  test_failover.py  test_setup.py  test_signals.py
tests/smoke/acceptance/: conftest.py  test_canvas.py
tests/smoke/sanity/: ___conftest.py  __conftest.py  conftest copy.py  test_canvas.py
tests/unit/: conftest.py
tests/unit/api/: test_backend.py  test_base.py  test_broker.py  test_worker.py
tests/unit/components/: conftest.py  test_memcached.py  test_worker.py
tests/unit/containers/: test_container.py  test_memcached.py  test_rabbitmq.py  test_redis.py  test_worker.py
tests/unit/docker/: api.py
tests/unit/setup/: conftest.py  test_setup.py
(+25 files in other folders)
